--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Haru_question" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Haru_question" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/indigo_700</item>
+        <item name="colorPrimaryVariant">@color/indigo_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/beige_100</item>
+        <item name="colorSecondaryVariant">@color/beige_100</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >@color/indigo_700</item>
         <!-- Customize your theme here. -->
+        <item name="android:background" >@color/indigo_700</item>
+        <item name="android:navigationBarColor" >@color/indigo_700</item>
+        <item name="android:textColor" >@color/gold_100</item>
+
     </style>
 </resources>
