feat : bottomSheetDialog 배경 투명 이전까지

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,9 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/indigo_700</item>
         <!-- Customize your theme here. -->
+
         <item name="android:background" >@color/indigo_700</item>
         <item name="android:navigationBarColor" >@color/indigo_700</item>
         <item name="android:textColor" >@color/gold_100</item>
+<!--        <item name="android:windowBackground" >@android:color/transparent</item>-->
 
     </style>
 </resources>
