--- a/app/src/main/res/layout/fragment_haru_list.xml
+++ b/app/src/main/res/layout/fragment_haru_list.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/indigo_700"
         tools:context=".HaruListFragment">
+
         <ImageButton
             android:id="@+id/btn_list_back"
             android:layout_width="wrap_content"
@@ -16,6 +19,7 @@
             android:src="@drawable/ic_baseline_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
@@ -25,12 +29,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btn_list_back">
+
             <ImageView
                 android:id="@+id/iv_list_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:src="@drawable/ic_star" />
+
             <TextView
                 android:id="@+id/tv_list_title"
                 android:layout_width="wrap_content"
@@ -40,6 +46,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
@@ -51,6 +58,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_list_back" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
