--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,6 +30,9 @@
             app:destination="@id/haruWorryFragment"
             app:enterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out" />
+        <action
+            android:id="@+id/action_homeFragment_to_writeBottomSheetFragment"
+            app:destination="@id/writeBottomSheetFragment" />
     </fragment>
     <fragment
         android:id="@+id/haruListFragment"
@@ -41,4 +44,10 @@
         android:name="com.colddelight.haru_question.HaruWorryFragment"
         android:label="fragment_haru_worry"
         tools:layout="@layout/fragment_haru_worry" />
+
+    <dialog
+        android:id="@+id/writeBottomSheetFragment"
+        android:name="com.colddelight.haru_question.WriteBottomSheetFragment"
+        android:label="fragment_write_bottom_sheet"
+        tools:layout="@layout/fragment_write_bottom_sheet" />
 </navigation>
