--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -132,7 +132,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/btn_drawer" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/tv_home_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
@@ -151,7 +151,8 @@
                 android:layout_marginEnd="48dp"
                 android:text="2022.08.08"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />
+
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottie_home"
@@ -162,6 +163,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view5"
                 app:lottie_rawRes="@raw/home_first" />
+
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
