--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Haru_question" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Haru_question" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/gold_100</item>
+        <item name="colorPrimary">@color/indigo_700</item>
         <item name="colorPrimaryVariant">@color/indigo_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -10,7 +10,13 @@
         <item name="colorSecondaryVariant">@color/beige_100</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >@color/indigo_700</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:background" >@color/indigo_700</item>
+        <item name="android:navigationBarColor" >@color/indigo_700</item>
+        <item name="android:textColor" >@color/gold_100</item>
+        <!--        <item name="android:windowBackground" >@android:color/transparent</item>-->
+
     </style>
 </resources>
