--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Haru_question" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Haru_question" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/indigo_700</item>
         <item name="colorPrimaryVariant">@color/indigo_700</item>
@@ -13,10 +13,17 @@
         <item name="android:statusBarColor" >@color/indigo_700</item>
         <!-- Customize your theme here. -->
 
-        <item name="android:background" >@color/indigo_700</item>
+<!--        <item name="android:background" >@color/indigo_700</item>-->
+        <item name="android:background" >@android:color/transparent</item>
+<!--        <item name="android:backgroundTint" >@android:color/transparent</item>-->
+        <item name="android:backgroundTint" >@color/indigo_700</item>
         <item name="android:navigationBarColor" >@color/indigo_700</item>
         <item name="android:textColor" >@color/gold_100</item>
 <!--        <item name="android:windowBackground" >@android:color/transparent</item>-->
 
     </style>
+
+
+
+
 </resources>
