--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,14 +14,21 @@
         <!-- Customize your theme here. -->
 
 <!--        <item name="android:background" >@color/indigo_700</item>-->
-        <item name="android:background" >@android:color/transparent</item>
+<!--        <item name="android:background" >@android:color/transparent</item>-->
+
 <!--        <item name="android:backgroundTint" >@android:color/transparent</item>-->
-        <item name="android:backgroundTint" >@color/indigo_700</item>
+<!--        <item name="android:backgroundTint" >@color/indigo_700</item>-->
         <item name="android:navigationBarColor" >@color/indigo_700</item>
         <item name="android:textColor" >@color/gold_100</item>
 <!--        <item name="android:windowBackground" >@android:color/transparent</item>-->
 
     </style>
+
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="colorControlActivated">@color/gold_100</item>
+    </style>
+
+
 
 
 
