--- a/app/src/main/res/layout/fragment_write_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_write_bottom_sheet.xml
@@ -39,10 +39,10 @@
         android:layout_marginEnd="8dp"
         android:background="@color/beige_100"
         android:backgroundTint="@color/beige_100"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_write_date"
+        app:layout_constraintEnd_toStartOf="@+id/tv_write_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="@+id/tv_write_date" />
 
     <View
         android:id="@+id/view12"
@@ -53,7 +53,7 @@
         android:background="@color/gold_100"
         android:backgroundTint="@color/gold_100"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_write_date" />
 
     <View
         android:id="@+id/view8"
@@ -76,13 +76,13 @@
         android:layout_marginEnd="8dp"
         android:background="@color/beige_100"
         android:backgroundTint="@color/beige_100"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_write_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/textView5" />
+        app:layout_constraintStart_toEndOf="@+id/tv_write_date"
+        app:layout_constraintTop_toTopOf="@+id/tv_write_date" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_write_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -94,14 +94,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_write_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="50dp"
         android:text="1998.12.01"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_write_question" />
 
     <TextView
         android:id="@+id/textView6"
@@ -115,7 +115,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view9" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_question_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="005"
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/tv_write_quote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -139,7 +139,7 @@
         app:layout_constraintTop_toTopOf="@+id/view12" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/tv_write_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -149,7 +149,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine2"
+        android:id="@+id/et_write"
         android:layout_width="0dp"
         android:layout_height="400dp"
         android:layout_marginStart="24dp"
@@ -157,18 +157,22 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/bg_input"
-        android:backgroundTint="@color/indigo_700"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:padding="16dp"
+        android:textColor="@color/beige_100"
+        android:textColorHighlight="@color/gold_100"
+        android:textColorLink="@color/gold_100"
+        android:textCursorDrawable="@drawable/cursor_drawable"
+        app:layout_constraintBottom_toTopOf="@+id/btn_write"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view12" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_write"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -181,16 +185,27 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/tv_write_max"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
-        android:text="0/100"
+        android:text="/100"
         android:textColor="@color/beige_100"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextTextMultiLine2"
+        app:layout_constraintBottom_toBottomOf="@+id/et_write"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_write_cnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="@color/beige_100"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_write_max"
+        app:layout_constraintEnd_toStartOf="@+id/tv_write_max"
+        app:layout_constraintTop_toTopOf="@+id/tv_write_max" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
