--- a/app/src/main/res/layout/fragment_haru_worry.xml
+++ b/app/src/main/res/layout/fragment_haru_worry.xml
@@ -47,6 +47,7 @@
         </LinearLayout>
 
         <View
+            android:id="@+id/view6"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="8dp"
@@ -57,18 +58,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_worry_back" />
 
-        <TextView
-            android:id="@+id/textView3"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_worry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="WorryPage"
-            android:textSize="30sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/view6"
+            app:lottie_rawRes="@raw/worry" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:clickable="true"
+            app:backgroundTint="@color/indigo_700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view6"
+            app:srcCompat="@drawable/ic_tooltips" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
