feat : layout check

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,7 +110,7 @@
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/selector_btn"
                 android:enabled="false"
-                android:text="답변하기"
+                android:text="@string/btn_answer"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="30dp"
-                android:text="하루 질문"
+                android:text="@string/haru_q"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/btn_drawer"
                 app:layout_constraintTop_toBottomOf="@+id/btn_drawer" />
@@ -146,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="하루 질문을 찾아 보세요!"
+                android:text="@string/haru_q_ready"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
