--- a/app/src/main/res/layout/fragment_list_detail.xml
+++ b/app/src/main/res/layout/fragment_list_detail.xml
@@ -10,17 +10,6 @@
         tools:context=".ListDetailFragment">
 
         <View
-            android:id="@+id/view20"
-            android:layout_width="4dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/gold_100"
-            android:backgroundTint="@color/gold_100"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_detail_date" />
-
-        <View
             android:id="@+id/view15"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
@@ -137,6 +126,48 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view16" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_date">
+
+            <TextView
+                android:id="@+id/tv_detail_qutoe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="그래, 산다는 것은  바람이 약해지는 것을 기다리는게 아니라\n  그 바람 속을 헤쳐나가는 것이다"
+                app:layout_constraintStart_toEndOf="@+id/view20"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_detail_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text=" - Alfred Hitchcock"
+                android:textColor="@color/beige_100"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_qutoe" />
+
+            <View
+                android:id="@+id/view20"
+                android:layout_width="4dp"
+                android:layout_height="0dp"
+                android:background="@color/gold_100"
+                android:backgroundTint="@color/gold_100"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
@@ -171,36 +202,18 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_detail_question" />
 
         <TextView
-            android:id="@+id/tv_detail_qutoe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:text="그래, 산다는 것은  바람이 약해지는 것을 기다리는게 아니라\n  그 바람 속을 헤쳐나가는 것이다"
-            app:layout_constraintStart_toEndOf="@+id/view20"
-            app:layout_constraintTop_toTopOf="@+id/view20" />
-
-        <TextView
-            android:id="@+id/tv_detail_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:text=" - Alfred Hitchcock"
-            android:textColor="@color/beige_100"
-            app:layout_constraintBottom_toBottomOf="@+id/view20"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <TextView
             android:id="@+id/tv_detail_answer"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="350dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/bg_input"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.475"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_detail_author" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
         <TextView
             android:id="@+id/tv_detail_cnt"
@@ -221,7 +234,7 @@
             android:layout_marginEnd="8dp"
             android:clickable="true"
             android:src="@drawable/ic_share"
-            app:backgroundTint="@color/indigo_700"
+            app:backgroundTint="@color/indigo_500"
             app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton3"
             app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
             app:layout_constraintTop_toTopOf="@+id/floatingActionButton3" />
@@ -230,11 +243,11 @@
             android:id="@+id/floatingActionButton3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
             android:clickable="true"
             android:src="@drawable/ic_download"
-            app:backgroundTint="@color/indigo_700"
+            app:backgroundTint="@color/indigo_500"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_detail_answer" />
 
