--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="gold_100">#BF9D50</color>
     <color name="gold_200">#8D7848</color>
     <color name="indigo_700">#000D1B</color>
+    <color name="indigo_500">#07121F</color>
     <color name="beige_100">#D4CBBE</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
