--- a/app/src/main/res/layout/fragment_list_detail.xml
+++ b/app/src/main/res/layout/fragment_list_detail.xml
@@ -169,7 +169,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/tv_detail_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="001"
