--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,13 +100,13 @@
                 android:id="@+id/tv_home_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="4dp"
                 android:text="@string/haru_q_ready"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_no" />
 
             <TextView
                 android:id="@+id/tv_home_date"
@@ -164,6 +164,28 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_view_headline_24" />
+
+            <TextView
+                android:id="@+id/tv_home_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:textColor="@color/beige_100"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view3" />
+
+            <TextView
+                android:id="@+id/tv_home_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/beige_100"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:tooltipText="001"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_home_no"
+                app:layout_constraintStart_toEndOf="@+id/tv_home_no"
+                app:layout_constraintTop_toTopOf="@+id/tv_home_no" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
