--- a/app/src/main/res/layout/fragment_haru_list.xml
+++ b/app/src/main/res/layout/fragment_haru_list.xml
@@ -25,32 +25,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <TextView
+            android:id="@+id/tv_list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:drawableLeft="@drawable/ic_star"
+            android:text="하루모음"
+            android:textColor="@color/beige_100"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/btn_list_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btn_list_back">
-
-            <ImageView
-                android:id="@+id/iv_list_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:src="@drawable/ic_star" />
-
-            <TextView
-                android:id="@+id/tv_list_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="하루모음"
-                android:textColor="@color/beige_100"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="@+id/btn_list_back" />
 
         <View
             android:id="@+id/view"
