--- a/app/src/main/res/layout/fragment_haru_worry.xml
+++ b/app/src/main/res/layout/fragment_haru_worry.xml
@@ -20,31 +20,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_worry_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:drawableLeft="@drawable/ic_moon"
+            android:text="하루고민"
+            android:textColor="@color/beige_100"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/btn_worry_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btn_worry_back">
-
-            <ImageView
-                android:id="@+id/iv_worry_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:src="@drawable/ic_moon" />
-
-            <TextView
-                android:id="@+id/tv_worry_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="하루고민"
-                android:textColor="@color/beige_100"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="@+id/btn_worry_back" />
 
         <View
             android:id="@+id/view6"
@@ -60,11 +48,11 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_worry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/cl_worry"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_tip"
             app:lottie_rawRes="@raw/worry_main" />
@@ -73,13 +61,15 @@
             android:id="@+id/cl_worry"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="-40dp"
             android:background="@color/indigo_700"
             android:backgroundTint="@color/indigo_700"
             android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lottie_worry">
+            app:layout_constraintTop_toBottomOf="@+id/view6"
+            app:layout_constraintVertical_bias="0.700">
 
             <View
                 android:id="@+id/view13"
@@ -111,7 +101,7 @@
                 android:id="@+id/tv_worry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="마음속으로 고민을 생각하고 위의 달을 터치하세요"
+                android:text="@string/worry_info"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/view7"
@@ -124,7 +114,7 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_refresh"
             android:layout_width="100dp"
-            android:layout_height="0dp"
+            android:layout_height="100dp"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:visibility="invisible"
