--- a/app/src/main/res/layout/fragment_list_detail.xml
+++ b/app/src/main/res/layout/fragment_list_detail.xml
@@ -2,7 +2,9 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/indigo_700"
@@ -10,24 +12,12 @@
         tools:context=".ListDetailFragment">
 
         <View
-            android:id="@+id/view15"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/gold_200"
-            android:elevation="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />
-
-        <View
             android:id="@+id/view16"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:background="@color/gold_200"
+            android:background="@color/beige_100"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintEnd_toStartOf="@+id/textView5"
@@ -41,7 +31,7 @@
             android:layout_height="1dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:background="@color/gold_200"
+            android:background="@color/beige_100"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_detail_date"
             app:layout_constraintEnd_toStartOf="@+id/tv_detail_date"
@@ -55,7 +45,7 @@
             android:layout_height="1dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/gold_200"
+            android:background="@color/beige_100"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_detail_date"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +59,7 @@
             android:layout_height="1dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/gold_200"
+            android:background="@color/beige_100"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,42 +68,15 @@
             app:layout_constraintTop_toTopOf="@+id/textView5" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="@string/list_title"
-            android:textColor="@color/beige_100"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/floatingActionButton"
-            app:drawableStartCompat="@drawable/ic_star" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:clickable="true"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            app:backgroundTint="@color/indigo_700"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/back" />
-
-        <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="8dp"
             android:text="@string/list_title"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
-            app:layout_constraintTop_toBottomOf="@+id/view15" />
+            app:layout_constraintStart_toEndOf="@+id/btn_detail_back"
+            app:layout_constraintTop_toBottomOf="@+id/btn_detail_back" />
 
         <TextView
             android:id="@+id/textView7"
@@ -143,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="그래, 산다는 것은  바람이 약해지는 것을 기다리는게 아니라\n  그 바람 속을 헤쳐나가는 것이다"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/view20"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -182,14 +146,17 @@
 
         <TextView
             android:id="@+id/tv_detail_question"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
             android:text="테스트용 데이터입니다"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_number" />
 
         <TextView
             android:id="@+id/tv_detail_date"
@@ -204,52 +171,76 @@
         <TextView
             android:id="@+id/tv_detail_answer"
             android:layout_width="0dp"
-            android:layout_height="350dp"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
             android:background="@drawable/bg_input"
             android:padding="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_share"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.475"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
         <TextView
-            android:id="@+id/tv_detail_cnt"
+            android:id="@+id/tv_detail_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="31/100"
+            android:text="/100"
             android:textColor="@color/beige_100"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/tv_detail_answer"
             app:layout_constraintEnd_toEndOf="@+id/tv_detail_answer" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/btn_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:clickable="true"
             android:src="@drawable/ic_share"
             app:backgroundTint="@color/indigo_500"
-            app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton3"
-            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
-            app:layout_constraintTop_toTopOf="@+id/floatingActionButton3" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn_screen"
+            app:layout_constraintEnd_toStartOf="@+id/btn_screen"
+            app:layout_constraintTop_toTopOf="@+id/btn_screen" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton3"
+            android:id="@+id/btn_screen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:clickable="true"
             android:src="@drawable/ic_download"
             app:backgroundTint="@color/indigo_500"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_detail_answer" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_detail_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/indigo_700"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
+        <TextView
+            android:id="@+id/tv_detail_cnt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="31"
+            android:textColor="@color/beige_100"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_max"
+            app:layout_constraintEnd_toStartOf="@+id/tv_detail_max"
+            app:layout_constraintTop_toTopOf="@+id/tv_detail_max" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
