--- a/app/src/main/res/layout/fragment_write_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_write_bottom_sheet.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:background="@color/indigo_700"
+        android:background="@drawable/bg_top_corner"
         android:orientation="vertical">
 
         <TextView
@@ -102,6 +101,7 @@
                 android:layout_marginStart="16dp"
                 android:text="그래, 산다는 것은  바람이 약해지는 것을 기다리는게 아니라\n  그 바람 속을 헤쳐나가는 것이다"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/view12"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -119,9 +119,12 @@
 
         <TextView
             android:id="@+id/tv_write_question"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
             android:text="테스트용 데이터입니다"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +169,7 @@
         <EditText
             android:id="@+id/et_write"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
@@ -174,12 +177,13 @@
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
-            android:minLines="10"
+            android:minLines="0"
             android:padding="16dp"
             android:textColor="@color/beige_100"
             android:textColorHighlight="@color/gold_100"
             android:textColorLink="@color/gold_100"
             android:textCursorDrawable="@drawable/cursor_drawable"
+            app:layout_constraintBottom_toTopOf="@+id/btn_write"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -189,7 +193,7 @@
             android:id="@+id/btn_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/selector_btn"
