feat : layout 크기

--- a/app/src/main/res/layout/item_recycler_list.xml
+++ b/app/src/main/res/layout/item_recycler_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="item"
             type="com.colddelight.domain.model.DomainQuestion" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,9 +37,12 @@
 
         <TextView
             android:id="@+id/tv_list_question"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
             android:text="가장 좋아하는 영화와 이유는?"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
