--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,5 +69,8 @@
         <argument
             android:name="id"
             app:argType="integer" />
+        <argument
+            android:name="a_id"
+            app:argType="integer" />
     </fragment>
 </navigation>
